--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "date-fns": "^2.30.0",
     "firebase": "^10.10.0",
     "lucide-react": "^0.294.0",
-    "next": "14.0.3",
+    "next": "^14.2.1",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
